[tool.poetry]
name = "quantum-examples"
version = "0.1.0"
description = "Public examples of using current quantum computers to solve problems"
authors = ["Sinjhin (John Gardner) <john@ardea.io>"]
license = "MIT"
readme = "README.md"

[tool.poe.tasks]
run = "python -m quantum_examples.main"

[tool.poetry.dependencies]
python = "^3.12"
dimod = "^0.12.18"
dwave-system = "^1.28.0"
amazon-braket-sdk = "^1.88.3"
numpy = "^2.2.1"
rich = "^13.9.4"
minorminer = "^0.2.16"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
